--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: windows-11
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
